--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -13,19 +13,11 @@
 	<body>
 	
 		{% block content %}
-			<div class="post">
-				<img src="/static/img/{{ post.id }}.png">
-				<h3><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
-				<p>{{ post.text|linebreaksbr }}</p>
-				{% if post.published_date %}
-					<div class="date">
-						<em>publicado em: {{ post.created_date }}</em>
-						{% if user.is_authenticated %}
-							<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-						{% endif %}
-					</div>
-				{% endif %}
-			</div>
+			<h1>Novo post</h1>
+			<form method="POST" class="post-form">{% csrf_token %}
+				{{ form.as_p }}
+				<button type="submit" class="save btn btn-default">Salvar</button>
+			</form>
 		{% endblock content %}
 		
 	</body>
