--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,17 +15,41 @@
 		{% block content %}
 			<div class="post">
 				<img src="/static/img/{{ post.id }}.png">
-				<h3><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
+				<h3><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a>&nbsp&nbsp
+				{% if user.is_authenticated %}
+						<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+				{% endif %}
+				</h3>
 				<p>{{ post.text|linebreaksbr }}</p>
 				{% if post.published_date %}
 					<div class="date">
 						<em>publicado em: {{ post.created_date }}</em>
-						{% if user.is_authenticated %}
-							<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-						{% endif %}
 					</div>
 				{% endif %}
 			</div>
+			
+			<hr>
+
+			<h1>Comentários:</h1><br>
+			
+			{% for comment in post.comments.all %}
+				{% if user.is_authenticated or comment.approved_comment %}
+					<div class="comment">
+						<strong>{{ comment.author }}</strong>
+						<p>{{ comment.text|linebreaks }}</p>
+						<div class="date">{{ comment.created_date }}
+						{% if not comment.approved_comment %}
+							<a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+							<a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+						{% endif %}
+						</div>
+						<hr>
+					</div>
+				{% endif %}
+			{% empty %}
+				<p>Nenhum comentário adicionado.</p><br>
+			{% endfor %}
+			<a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Deixe um comentário</a>
 		{% endblock content %}
 		
 	</body>
