--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -20,7 +20,7 @@
 						<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
 				{% endif %}
 				</h3>
-				<p>{{ post.text|linebreaksbr }}</p>
+				<p>{{ post.text|safe|linebreaksbr }}</p>
 				{% if post.published_date %}
 					<div class="date">
 						<em>publicado em: {{ post.created_date }}</em>
